Fixed review text that was wrapping.

--- a/scss/_items.scss
+++ b/scss/_items.scss
@@ -354,7 +354,7 @@
       font-size: 12px;
       color: $dvGray;
       margin: 0;
-      padding: 0 0 8px 0;
+      padding: 0 0 8px 60px;
     }
     img {
       border-radius: 50%;
