--- a/scss/style.css
+++ b/scss/style.css
@@ -368,7 +368,7 @@
     font-size: 12px;
     color: #2c3034;
     margin: 0;
-    padding: 0 0 8px 0; }
+    padding: 0 0 8px 60px; }
   /* line 359, _items.scss */
   .reviews #reviewsDiv img {
     border-radius: 50%;
